Switch to Bootstrap v4.0.0-alpha.5

--- a/cinemadrape/windows/history/index.html
+++ b/cinemadrape/windows/history/index.html
@@ -19,19 +19,19 @@ description : View CinemaDrape's full version history and see a comprehensive li
 {% capture thecontent %}
 <ul class="list-group">
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         Transparent focus areas can now be added using the mouse, like drawing rectangles
     </li>
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         Added the ability to create as many focus areas as you need
     </li>
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         Added the ability to save the focus areas for future reuse in any number of layout files
     </li>
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         Added a customizable keyword shortcut to pause and resume the drape
     </li>
     <li class="list-group-item"><time class="text-muted"><small>November 28, 2012</small></time></li>
@@ -42,7 +42,7 @@ description : View CinemaDrape's full version history and see a comprehensive li
 {% capture thecontent %}
 <ul class="list-group">
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         Added new menu items to simplify changing the shortcut keys that start CinemaDrape
     </li>
     <li class="list-group-item"><time class="text-muted"><small>August 06, 2010</small></time></li>
@@ -53,19 +53,19 @@ description : View CinemaDrape's full version history and see a comprehensive li
 {% capture thecontent %}
 <ul class="list-group">
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         Added an option to temporarily pause and reveal the entire screen
     </li>
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         Added menu options for standard focus area sizes
     </li>
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         Added the ability to restore the previously selected focus area
     </li>
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         Added a menu option to set a random drape color
     </li>
     <li class="list-group-item"><time class="text-muted"><small>May 28, 2010</small></time></li>
@@ -76,7 +76,7 @@ description : View CinemaDrape's full version history and see a comprehensive li
 {% capture thecontent %}
 <ul class="list-group">
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         First public release.
     </li>
     <li class="list-group-item"><time class="text-muted"><small>February 01, 2010</small></time></li>
