--- a/colorveil/windows/index.html
+++ b/colorveil/windows/index.html
@@ -17,8 +17,8 @@ image         : /img/apps/colorveil/colorveil-jumbotron-shot.png
             <p>ColorVeil adds a customizable color filter over your Desktop, Internet browser, video player, document, email, or program. You can work, play, read, write, or browse as usual. </p>
         </div>
         <div class="col-lg-4 content-item">
-            <h3 class="item-heading">Dyslexia / Irlen</h3>
-            <p>ColorVeil can help people with Dyslexia / Meares Irlen's Syndrome. It applies a coloured tint across the screen, color that can match the prescription from the optometrist.</p>
+            <h3 class="item-heading">Dyslexia / SSS</h3>
+            <p>ColorVeil can help people with Dyslexia and Scotopic Sensitivity Syndrome. It applies a coloured tint across the screen, color that can match the prescription from the optometrist.</p>
         </div>
         <div class="col-lg-4 content-item">
             <h3 class="item-heading">Extra Dimmer</h3>
