--- a/htmtied/windows/download/index.html
+++ b/htmtied/windows/download/index.html
@@ -28,7 +28,7 @@ description : Download, install and run HTMtied on any PC, notebook or tablet wi
 </p>
 <p>
     <a class="btn btn-primary" href="http://download.aurelitec.com/htmtied/windows/htmtied-portable.zip" role="button">Download ZIP</a>
-    <span class="label label-default m-l-1">Only 15KB</span>
+    <span class="tag tag-default ml-1">Only 15KB</span>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Portable" %}
