--- a/injuredpixels/android/download/index.html
+++ b/injuredpixels/android/download/index.html
@@ -26,7 +26,7 @@ description : Install and run InjuredPixels on any smartphone or tablet with And
 </p>
 <p>
     <a class="btn btn-primary" href="https://play.google.com/store/apps/details?id=com.aurelitec.injuredpixels" role="button" target="_blank">Get it on Google Play</a>
-    <span class="label label-default m-l-1">Only 37KB</span>
+    <span class="tag tag-default ml-1">Only 37KB</span>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Install" %}
