--- a/injuredpixels/android/history/index.html
+++ b/injuredpixels/android/history/index.html
@@ -11,7 +11,7 @@ description : View full version history for InjuredPixels for Android, and see a
 {% capture thecontent %}
 <ul class="list-group">
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         First public release
     </li>
     <li class="list-group-item"><time class="text-muted"><small>February 19, 2016</small></time></li>
