--- a/injuredpixels/windows/history/index.html
+++ b/injuredpixels/windows/history/index.html
@@ -20,7 +20,7 @@ description : View full version history for InjuredPixels for Windows, and see a
 {% capture thecontent %}
 <ul class="list-group">
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         Added multi-monitor support to check any or all connected monitors/displays for dead pixels
     </li>
     <li class="list-group-item"><time class="text-muted"><small>October 12, 2010</small></time></li>
@@ -31,7 +31,7 @@ description : View full version history for InjuredPixels for Windows, and see a
 {% capture thecontent %}
 <ul class="list-group">
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         Added a new edition of the program in the form of a HTML Application (HTA)
     </li>
     <li class="list-group-item"><time class="text-muted"><small>April 30, 2010</small></time></li>
@@ -42,7 +42,7 @@ description : View full version history for InjuredPixels for Windows, and see a
 {% capture thecontent %}
 <ul class="list-group">
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         First public release
     </li>
     <li class="list-group-item"><time class="text-muted"><small>December 03, 2009</small></time></li>
