--- a/pixelhealer/windows/download/index.html
+++ b/pixelhealer/windows/download/index.html
@@ -28,7 +28,7 @@ description   : Download, install and run PixelHealer on any PC, notebook or tab
 </p>
 <p>
     <a class="btn btn-primary" href="http://download.aurelitec.com/pixelhealer/windows/pixelhealer-install.exe" role="button">Download EXE</a>
-    <span class="label label-default m-l-1">Only 98KB</span>
+    <span class="tag tag-default ml-1">Only 98KB</span>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Install" %}
@@ -42,7 +42,7 @@ description   : Download, install and run PixelHealer on any PC, notebook or tab
 </p>
 <p>
     <a class="btn btn-primary" href="http://download.aurelitec.com/pixelhealer/windows/pixelhealer-portable.zip" role="button">Download ZIP</a>
-    <span class="label label-default m-l-1">Only 25KB</span>
+    <span class="tag tag-default ml-1">Only 25KB</span>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Portable" %}
