--- a/thumbico/windows/download/index.html
+++ b/thumbico/windows/download/index.html
@@ -28,7 +28,7 @@ description   : Download, install and run Thumbico on any PC, notebook or tablet
 </p>
 <p>
     <a class="btn btn-primary" href="http://download.aurelitec.com/thumbico/windows/thumbico-install.exe" role="button">Download EXE</a>
-    <span class="label label-default m-l-1">Only 101KB</span>
+    <span class="tag tag-default ml-1">Only 101KB</span>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Install" %}
@@ -42,7 +42,7 @@ description   : Download, install and run Thumbico on any PC, notebook or tablet
 </p>
 <p>
     <a class="btn btn-primary" href="http://download.aurelitec.com/thumbico/windows/thumbico-portable.zip" role="button">Download ZIP</a>
-    <span class="label label-default m-l-1">Only 27KB</span>
+    <span class="tag tag-default ml-1">Only 27KB</span>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Portable" %}
