--- a/thumbico/windows/history/index.html
+++ b/thumbico/windows/history/index.html
@@ -11,7 +11,7 @@ description : View Thumbico's full version history and see a comprehensive list 
 {% capture thecontent %}
 <ul class="list-group">
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         Added portable and installer editions
     </li>
     <li class="list-group-item">Improved native support for Windows 10/8.1/8</li>
@@ -23,7 +23,7 @@ description : View Thumbico's full version history and see a comprehensive list 
 {% capture thecontent %}
 <ul class="list-group">
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         First public release
     </li>
     <li class="list-group-item"><time class="text-muted"><small>January 21, 2011</small></time></li>
