--- a/colortypist/windows/download/index.html
+++ b/colortypist/windows/download/index.html
@@ -28,7 +28,7 @@ description   : Download, install and run Colortypist on any PC, notebook or tab
 </p>
 <p>
     <a class="btn btn-primary" href="http://download.aurelitec.com/colortypist/windows/colortypist-installer.exe" role="button">Download EXE</a>
-    <span class="label label-default m-l-1">Only 112KB</span>
+    <span class="tag tag-default ml-1">Only 112KB</span>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Install" %}
@@ -42,7 +42,7 @@ description   : Download, install and run Colortypist on any PC, notebook or tab
 </p>
 <p>
     <a class="btn btn-primary" href="http://download.aurelitec.com/colortypist/windows/colortypist-portable.zip" role="button">Download ZIP</a>
-    <span class="label label-default m-l-1">Only 39KB</span>
+    <span class="tag tag-default ml-1">Only 39KB</span>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Portable" %}
