--- a/colortypist/windows/history/index.html
+++ b/colortypist/windows/history/index.html
@@ -11,13 +11,13 @@ description : View Colortypist's full version history and see a comprehensive li
 {% capture thecontent %}
     <ul class="list-group">
         <li class="list-group-item">
-            <span class="label label-default label-pill pull-xs-right">New</span>
+            <span class="tag tag-default tag-pill float-xs-right">New</span>
             Added portable and installer editions
         </li>
         <li class="list-group-item">Improved native support for Windows 10/8.1/8</li>
         <li class="list-group-item">Minor interface improvements</li>
         <li class="list-group-item">
-            <span class="label label-default label-pill pull-xs-right">New</span>
+            <span class="tag tag-default tag-pill float-xs-right">New</span>
             New app icon
         </li>
         <li class="list-group-item"><time class="text-muted"><small>August 8, 2015</small></time></li>
@@ -29,7 +29,7 @@ description : View Colortypist's full version history and see a comprehensive li
     <ul class="list-group">
         <li class="list-group-item">A cleaner and more intuitive user interface</li>
         <li class="list-group-item">
-            <span class="label label-default label-pill pull-xs-right">New</span>
+            <span class="tag tag-default tag-pill float-xs-right">New</span>
             Added the ability to save colors as cross platform HTML files
         </li>
         <li class="list-group-item">A cleaner and more intuitive user interface</li>
@@ -42,11 +42,11 @@ description : View Colortypist's full version history and see a comprehensive li
 {% capture thecontent %}
     <ul class="list-group">
         <li class="list-group-item">
-            <span class="label label-default label-pill pull-xs-right">New</span>
+            <span class="tag tag-default tag-pill float-xs-right">New</span>
             Added the option to set solid color Desktop wallpapers
         </li>
         <li class="list-group-item">
-            <span class="label label-default label-pill pull-xs-right">New</span>
+            <span class="tag tag-default tag-pill float-xs-right">New</span>
             Added the ability to generate, copy and save color sample images
         </li>
         <li class="list-group-item"><time class="text-muted"><small>September 06, 2011</small></time></li>
@@ -57,7 +57,7 @@ description : View Colortypist's full version history and see a comprehensive li
 {% capture thecontent %}
     <ul class="list-group">
         <li class="list-group-item">
-            <span class="label label-default label-pill pull-xs-right">New</span>
+            <span class="tag tag-default tag-pill float-xs-right">New</span>
             First public release
         </li>
         <li class="list-group-item"><time class="text-muted"><small>August 03, 2011</small></time></li>
