--- a/htmtied/windows/history/index.html
+++ b/htmtied/windows/history/index.html
@@ -12,7 +12,7 @@ description : View HTMtied's full version history and see a comprehensive list o
 <ul class="list-group">
     <li class="list-group-item">Improved native support for Windows 8.1/8</li>
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         New and improved icon
     </li>
     <li class="list-group-item"><time class="text-muted"><small>May 29, 2013</small></time></li>
@@ -23,11 +23,11 @@ description : View HTMtied's full version history and see a comprehensive list o
 {% capture thecontent %}
 <ul class="list-group">
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         Added the ability to convert links en masse through Clipboard or by drag and drop
     </li>
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         Added a Direct Mode that automatically saves the link files to a directory of your choosing
     </li>
     <li class="list-group-item"><time class="text-muted"><small>August 26, 2010</small></time></li>
@@ -38,7 +38,7 @@ description : View HTMtied's full version history and see a comprehensive list o
 {% capture thecontent %}
 <ul class="list-group">
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         First public release
     </li>
     <li class="list-group-item"><time class="text-muted"><small>August 10, 2010</small></time></li>
