--- a/injuredpixels/windows/download/index.html
+++ b/injuredpixels/windows/download/index.html
@@ -28,7 +28,7 @@ description   : Download, install and run InjuredPixels on any PC, notebook or t
 </p>
 <p>
     <a class="btn btn-primary" href="http://download.aurelitec.com/injuredpixels/windows/injuredpixels-install.exe" role="button">Download EXE</a>
-    <span class="label label-default m-l-1">Only 98KB</span>
+    <span class="tag tag-default ml-1">Only 98KB</span>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Install" %}
@@ -42,7 +42,7 @@ description   : Download, install and run InjuredPixels on any PC, notebook or t
 </p>
 <p>
     <a class="btn btn-primary" href="http://download.aurelitec.com/injuredpixels/windows/injuredpixels-portable.zip" role="button">Download ZIP</a>
-    <span class="label label-default m-l-1">Only 25KB</span>
+    <span class="tag tag-default ml-1">Only 25KB</span>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Portable" %}
@@ -56,7 +56,7 @@ description   : Download, install and run InjuredPixels on any PC, notebook or t
 </p>
 <p>
     <a class="btn btn-primary" href="http://download.aurelitec.com/injuredpixels/web/hta/injuredpixels.hta" role="button">Download HTA</a>
-    <span class="label label-default m-l-1">Only 17KB</span>
+    <span class="tag tag-default ml-1">Only 17KB</span>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="HTA" %}
