--- a/whatsmyco/web/history/index.html
+++ b/whatsmyco/web/history/index.html
@@ -11,7 +11,7 @@ description : View WhatsMyCo's full version history and see a comprehensive list
 {% capture thecontent %}
 <ul class="list-group">
     <li class="list-group-item">
-        <span class="label label-default label-pill pull-xs-right">New</span>
+        <span class="tag tag-default tag-pill float-xs-right">New</span>
         First public release.
     </li>
     <li class="list-group-item"><time class="text-muted"><small>November 12, 2013</small></time></li>
