Fix column clear issue

--- a/colorveil/windows/index.html
+++ b/colorveil/windows/index.html
@@ -18,7 +18,7 @@ image         : /img/apps/colorveil/colorveil-jumbotron-shot.png
         </div>
         <div class="col-lg-4 content-item">
             <h3 class="item-heading">Dyslexia / SSS</h3>
-            <p>ColorVeil can help people with Dyslexia and Scotopic Sensitivity Syndrome. It applies a coloured tint across the screen, color that can match the prescription from the optometrist.</p>
+            <p>ColorVeil can help people with Dyslexia and Scotopic Sensitivity Syndrome. It applies a coloured tint across the screen, that can match the prescription from the optometrist.</p>
         </div>
         <div class="col-lg-4 content-item">
             <h3 class="item-heading">Extra Dimmer</h3>
