Improve the ColorVeil download page
* Add ColorVeil EXE installer download button

--- a/colorveil/windows/help/index.html
+++ b/colorveil/windows/help/index.html
@@ -5,7 +5,7 @@ appurl      : /colorveil/windows/
 layout      : app-page
 
 title       : ColorVeil Help - A color filter over your screen - Aurelitec
-description : Learn how to use ColorVeil to easily set a customizable color filter over your screen, reduce eye strain, and help with Dyslexia / Irlen.
+description : Learn how to use ColorVeil to easily set a customizable color filter over your screen, reduce eye strain, and help with Dyslexia.
 ---
 
 {% capture thecontent %}
