--- a/colorveil/windows/index.html
+++ b/colorveil/windows/index.html
@@ -60,7 +60,7 @@ image         : /img/apps/colorveil/colorveil-jumbotron-shot.png
 
 {% capture thecontent %}
     <blockquote class="blockquote">
-        <p>"We have been looking for the last few years to support children and young people with Dyslexia / Meares Irlen syndrome by way of coloured overlays, but have never been able to find a solution that works on computers. ColorVeil gives us the perfect solution, allowing full customisation by way of overlay to match the colours stated by the optometrist, removing a significant barrier to that young person's learning."</p>
+        <p>"We have been looking for the last few years to support children and young people with Dyslexia / Scotopic Sensitivity Syndrome by way of coloured overlays, but have never been able to find a solution that works on computers. ColorVeil gives us the perfect solution, allowing full customisation by way of overlay to match the colours stated by the optometrist, removing a significant barrier to that young person's learning."</p>
         <footer class="blockquote-footer">Mr M Webster, St Edmund Arrowsmith Catholic High School, UK</footer>
     </blockquote>
 {% endcapture %}
