--- a/_testimonials/colorveil/arrowsmith.html
+++ b/_testimonials/colorveil/arrowsmith.html
@@ -7,6 +7,6 @@ date  : 2016-04-29
 words : []
 ---
 
-"ColorVeil gives us the perfect solution for children and young people with Dyslexia / Meares Irlen syndrome, allowing
+"ColorVeil gives us the perfect solution for children and young people with Dyslexia / Scotopic Sensitivity Syndrome, allowing
 full customisation to match the colours stated by the optometrist."
 <a href="{{ site.github.url }}/colorveil/windows/testimonials/arrowsmith/">Read More</a>
