--- a/colorveil/windows/download/index.html
+++ b/colorveil/windows/download/index.html
@@ -11,27 +11,42 @@ description   : Download, install and run ColorVeil on any PC, notebook or table
 ---
 
 {% capture thecontent %}
-    <p class="square-middle">
-        ColorVeil is free for use in any environment, including but not necessarily limited to: personal, academic,
-        commercial, government, business, non-profit, and for-profit. Before using ColorVeil, you must accept its
-        <a href="{{ site.github.url }}/colorveil/windows/license/">License Agreement</a>.
-    </p>
+<h3 class="item-heading">ColorVeil Version 3.0.2.152</h3>
+<p>
+    You can install and run ColorVeil on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or
+    XP<a title="On Windows XP you also need Microsoft .NET Framework 2.0 or above."
+    href="http://www.microsoft.com/en-us/download/details.aspx?id=1639" target="_blank">*</a>.
+</p>
+<p>
+    ColorVeil is free for use in any environment: personal, academic,
+    commercial, government, business, non-profit, and for-profit. Before using ColorVeil, you must accept its
+    <a href="{{ site.github.url }}/colorveil/windows/license/">License Agreement</a>.
+</p>
 {% endcapture %}
-{% include templates/contentsection.html heading="License" %}
+{% include templates/contentsection.html heading="Info" %}
 
 {% capture thecontent %}
-<h3 class="item-heading">Install ColorVeil 3.0.2.152</h3>
-<p>You can install and run ColorVeil on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP<a title="On Windows XP you also need Microsoft .NET Framework 2.0 or above." href="http://www.microsoft.com/en-us/download/details.aspx?id=1639" target="_blank">*</a>. The Installer program will copy ColorVeil on your computer, create a Start Menu entry and set up an uninstaller.</p>
+<h3 class="item-heading">Install ColorVeil</h3>
+<p>The Installer program will copy ColorVeil on your PC, create a Start Menu entry and set up an uninstaller.</p>
+<p>
+    <a class="btn btn-primary" href="http://download.aurelitec.com/colorveil/windows/colorveil-installer.exe" role="button">Download EXE</a>
+</p>
+{% endcapture %}
+{% include templates/contentsection.html heading="Installer" %}
+
+{% capture thecontent %}
+<h3 class="item-heading">Install ColorVeil (MSI)</h3>
+<p>Use the MSI installer to install and deploy ColorVeil across your network.</p>
 <p>
     <a class="btn btn-primary" href="http://download.aurelitec.com/colorveil/windows/colorveil.msi" role="button">Download 32-bit MSI</a>
     <a class="btn btn-primary" href="http://download.aurelitec.com/colorveil/windows/colorveil-x64.msi" role="button">Download 64-bit MSI</a>
 </p>
 {% endcapture %}
-{% include templates/contentsection.html heading="Install" %}
+{% include templates/contentsection.html heading="MSI" %}
 
 {% capture thecontent %}
-<h3 class="item-heading">Download ColorVeil 3.0.2.152 Portable</h3>
-<p>You can run ColorVeil on any PC, notebook or tablet with Windows 10, 8, 7, Vista, or XP<a title="On Windows XP you also need Microsoft .NET Framework 2.0 or above." href="http://www.microsoft.com/en-us/download/details.aspx?id=1639" target="_blank">*</a>. No installation is required. Just download and unpack the ZIP archive.</p>
+<h3 class="item-heading">Download ColorVeil Portable</h3>
+<p>No installation is required. Just download and unpack the ZIP archive.</p>
 <p>
     <a class="btn btn-primary" href="http://download.aurelitec.com/colorveil/windows/colorveil-portable.zip" role="button">Download ZIP</a>
 </p>
@@ -46,4 +61,4 @@ description   : Download, install and run ColorVeil on any PC, notebook or table
             <img height="120" class="featured-logo" src="{{ site.github.url }}/img/third/reviews/s/software-informer/software-informer-clean-award.png" alt="Software Informer Virus Free award" /></a>
     </div>
 {% endcapture %}
-{% include templates/contentsection.html heading="100% Clean" %}
+{% include templates/contentsection.html heading="Clean" %}
