--- a/colorveil/windows/testimonials/arrowsmith/index.html
+++ b/colorveil/windows/testimonials/arrowsmith/index.html
@@ -11,7 +11,7 @@ description : \"ColorVeil gives us the perfect solution, allowing full customisa
         <h3 class="page-heading">St Edmund Arrowsmith Catholic High School (UK)</h3>
         <p>
             "As Head of Learning support we have been looking for the last few years to support children and young
-            people with Dyslexia / Meares Irlen syndrome by way of coloured overlays, but have never been able to
+            people with Dyslexia / Scotopic Sensitivity Syndrome by way of coloured overlays, but have never been able to
             find a solution that works on computers. ColorVeil gives us the perfect solution, allowing full
             customisation by way of overlay to match the colours stated by the optometrist, removing a significant
             barrier to that young person's learning."
