Update InjuredPixels for Windows to version 4.0

--- a/injuredpixels/windows/history/index.html
+++ b/injuredpixels/windows/history/index.html
@@ -10,6 +10,25 @@ description : View full version history for InjuredPixels for Windows, and see a
 
 {% capture thecontent %}
 <ul class="list-group">
+    <li class="list-group-item">Save and restore colors and settings</li>
+    <li class="list-group-item">Added a Touch Mode to let the user gently rub any touchscreen area while testing</li>
+    <li class="list-group-item">Added support for high-resolution displays</li>
+    <li class="list-group-item">Improved interface</li>
+    <li class="list-group-item"><time class="text-muted"><small>February 5, 2017</small></time></li>
+</ul>
+{% endcapture %}
+{% include templates/contentsection.html heading="Version 4.0" %}
+
+{% capture thecontent %}
+<ul class="list-group">
+    <li class="list-group-item">Improved native support for Windows 10</li>
+    <li class="list-group-item"><time class="text-muted"><small>November 18, 2015</small></time></li>
+</ul>
+{% endcapture %}
+{% include templates/contentsection.html heading="Version 3.5" %}
+
+{% capture thecontent %}
+<ul class="list-group">
     <li class="list-group-item">Improved modern interface</li>
     <li class="list-group-item">Improved native support for Windows 8</li>
     <li class="list-group-item"><time class="text-muted"><small>October 9, 2012</small></time></li>
