--- a/injuredpixels/windows/download/index.html
+++ b/injuredpixels/windows/download/index.html
@@ -12,37 +12,36 @@ description   : Download, install and run InjuredPixels on any PC, notebook or t
 
 {% capture thecontent %}
     <p class="square-middle">
-        InjuredPixels is free for use in any environment, including but not necessarily limited to: personal, academic,
-        commercial, government, business, non-profit, and for-profit. Before using InjuredPixels, you must accept its
-        <a href="{{ site.github.url }}/injuredpixels/windows/license/">License Agreement</a>.
+        InjuredPixels is free and open source, and licensed under the
+        <a href="{{ site.github.url }}/injuredpixels/windows/license/">Apache License Version 2.0</a>.
     </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="License" %}
 
 {% capture thecontent %}
-<h3 class="item-heading">Install InjuredPixels 3.5.0.100</h3>
+<h3 class="item-heading">Install InjuredPixels 4.0.0.127</h3>
 <p>
     InjuredPixels runs on any PC, laptop or tablet with Windows 10, 8, 7, Vista, or
     XP<a title="On Windows XP you also need Microsoft .NET Framework 2.0 or above." href="http://www.microsoft.com/en-us/download/details.aspx?id=1639" target="_blank">*</a>.
     The Installer program will copy InjuredPixels on your PC, create a Start Menu entry, and set up an uninstaller.
 </p>
 <p>
-    <a class="btn btn-primary" href="http://download.aurelitec.com/injuredpixels/windows/injuredpixels-install.exe" role="button">Download EXE</a>
-    <span class="tag tag-default ml-1">Only 98KB</span>
+    <a class="btn btn-primary" href="https://github.com/aurelitec/injuredpixels-windows/releases/download/v4.0/injuredpixels-install.exe" role="button">Download EXE</a>
+    <span class="tag tag-default ml-1">Only 548KB</span>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Install" %}
 
 {% capture thecontent %}
-<h3 class="item-heading">Download InjuredPixels 3.5.0.100 Portable</h3>
+<h3 class="item-heading">Download InjuredPixels 4.0.0.127 Portable</h3>
 <p>
     InjuredPixels runs on any PC, laptop or tablet with Windows 10, 8, 7, Vista, or
     XP<a title="On Windows XP you also need Microsoft .NET Framework 2.0 or above." href="http://www.microsoft.com/en-us/download/details.aspx?id=1639" target="_blank">*</a>.
     No installation is required. Just download and unpack the ZIP archive.
 </p>
 <p>
-    <a class="btn btn-primary" href="http://download.aurelitec.com/injuredpixels/windows/injuredpixels-portable.zip" role="button">Download ZIP</a>
-    <span class="tag tag-default ml-1">Only 25KB</span>
+    <a class="btn btn-primary" href="https://github.com/aurelitec/injuredpixels-windows/releases/download/v4.0/injuredpixels-portable.zip" role="button">Download ZIP</a>
+    <span class="tag tag-default ml-1">Only 40KB</span>
 </p>
 {% endcapture %}
 {% include templates/contentsection.html heading="Portable" %}
