Add InjuredPixels for Windows Press Kit page (with icons and screenshots)

--- a/colorveil/windows/press/index.html
+++ b/colorveil/windows/press/index.html
@@ -4,8 +4,8 @@ app         : colorveil-windows
 appurl      : /colorveil/windows/
 layout      : app-page
 
-title       : ColorVeil Version History - What's new and improved
-description : View ColorVeil's full version history and see a comprehensive list of new features and improvements.
+title       : ColorVeil for Windows Press Kit
+description : "ColorVeil resources and information for reporters and publishers: product descriptions, download information, product icon and screenshots."
 ---
 
 {% capture thecontent %}
