Improve InjuredPixels for Windows pages * Add screenshots to the home page * Add GitHub link to the download page

--- a/injuredpixels/windows/download/index.html
+++ b/injuredpixels/windows/download/index.html
@@ -11,17 +11,22 @@ description   : Download, install and run InjuredPixels on any PC, notebook or t
 ---
 
 {% capture thecontent %}
-    <p class="square-middle">
-        InjuredPixels is free and open source, and licensed under the
-        <a href="{{ site.github.url }}/injuredpixels/windows/license/">Apache License Version 2.0</a>.
+    <p>
+        InjuredPixels for Windows is free and open source, and licensed under the <a href="{{ site.github.url
+        }}/injuredpixels/windows/license/">Apache License Version 2.0</a>. The source code is available <a
+        href="https://github.com/aurelitec/injuredpixels-windows" target="_blank">on GitHub</a>. We look forward to your
+        contributions!
     </p>
+    <a href="https://github.com/aurelitec/injuredpixels-windows" target="_blank">
+        <img class="inline-logo" src="/img/third/social/github/github-logo.png" alt="GitHub" />
+    </a>
 {% endcapture %}
 {% include templates/contentsection.html heading="License" %}
 
 {% capture thecontent %}
-<h3 class="item-heading">Install InjuredPixels 4.0.0.127</h3>
+<h3 class="item-heading">Install InjuredPixels for Windows</h3>
 <p>
-    InjuredPixels runs on any PC, laptop or tablet with Windows 10, 8, 7, Vista, or
+    <strong>Version 4.0.0.127.</strong> Runs on any PC, laptop or tablet with Windows 10, 8, 7, Vista, or
     XP<a title="On Windows XP you also need Microsoft .NET Framework 2.0 or above." href="http://www.microsoft.com/en-us/download/details.aspx?id=1639" target="_blank">*</a>.
     The Installer program will copy InjuredPixels on your PC, create a Start Menu entry, and set up an uninstaller.
 </p>
@@ -33,9 +38,9 @@ description   : Download, install and run InjuredPixels on any PC, notebook or t
 {% include templates/contentsection.html heading="Install" %}
 
 {% capture thecontent %}
-<h3 class="item-heading">Download InjuredPixels 4.0.0.127 Portable</h3>
+<h3 class="item-heading">Download InjuredPixels Portable</h3>
 <p>
-    InjuredPixels runs on any PC, laptop or tablet with Windows 10, 8, 7, Vista, or
+    <strong>Version 4.0.0.127.</strong> Runs on any PC, laptop or tablet with Windows 10, 8, 7, Vista, or
     XP<a title="On Windows XP you also need Microsoft .NET Framework 2.0 or above." href="http://www.microsoft.com/en-us/download/details.aspx?id=1639" target="_blank">*</a>.
     No installation is required. Just download and unpack the ZIP archive.
 </p>
@@ -47,9 +52,9 @@ description   : Download, install and run InjuredPixels on any PC, notebook or t
 {% include templates/contentsection.html heading="Portable" %}
 
 {% capture thecontent %}
-<h3 class="item-heading">Run InjuredPixels HTA 3.5.0.100</h3>
+<h3 class="item-heading">Run InjuredPixels HTA</h3>
 <p>
-    InjuredPixels HTA (HTML Application) is a tiny special kind of web page that can be run by Internet Explorer as a
+    <strong>Version 3.5.0.100.</strong> InjuredPixels HTA (HTML Application) is a tiny special kind of web page that can be run by Internet Explorer as a
     normal Windows program. It runs on any PC, laptop or tablet with Windows 10, 8, 7, Vista, or XP. No installation
     is required. Just download and select Open or Run.
 </p>
