--- a/injuredpixels/windows/history/index.html
+++ b/injuredpixels/windows/history/index.html
@@ -10,6 +10,7 @@ description : View full version history for InjuredPixels for Windows, and see a
 
 {% capture thecontent %}
 <ul class="list-group">
+    <li class="list-group-item">InjuredPixels for Windows has gone Open Source, on GitHub</li>
     <li class="list-group-item">Save and restore colors and settings</li>
     <li class="list-group-item">Added a Touch Mode to let the user gently rub any touchscreen area while testing</li>
     <li class="list-group-item">Added support for high-resolution displays</li>
