--- a/injuredpixels/windows/index.html
+++ b/injuredpixels/windows/index.html
@@ -64,3 +64,28 @@ image         : /img/apps/injuredpixels/windows/injuredpixels-jumbotron-shot.png
     </div>
 {% endcapture %}
 {% include templates/contentsection.html heading="Reviews" %}
+
+{% capture thecontent %}
+    <div class="row">
+        <div class="col-sm-6 col-lg-4 mb-2">
+            <a href="/img/apps/injuredpixels/windows/press/screenshots/injuredpixels-screenshot-black-and-menu.png"
+            target="_blank"> <img class="img-fluid screenshot"
+            src="/img/apps/injuredpixels/windows/press/screenshots/injuredpixels-screenshot-black-and-menu-thumb.png"
+            alt="InjuredPixels for Windows - Black And Menu Screenshot"> </a>
+        </div>
+        <div class="col-sm-6 col-lg-4 mb-2">
+            <a href="/img/apps/injuredpixels/windows/press/screenshots/injuredpixels-screenshot-red-and-menu.png"
+            target="_blank"> <img class="img-fluid screenshot"
+            src="/img/apps/injuredpixels/windows/press/screenshots/injuredpixels-screenshot-red-and-menu-thumb.png"
+            alt="InjuredPixels for Windows - Red And Menu Screenshot"> </a>
+        </div>
+        <div class="col-sm-6 col-lg-4 mb-2">
+            <a
+            href="/img/apps/injuredpixels/windows/press/screenshots/injuredpixels-screenshot-custom-color-and-menu.png"
+            target="_blank"> <img class="img-fluid screenshot"
+            src="/img/apps/injuredpixels/windows/press/screenshots/injuredpixels-screenshot-custom-color-and-menu-thumb.png"
+            alt="InjuredPixels for Windows - Custom Color And Menu Screenshot"> </a>
+        </div>
+    </div>
+{% endcapture %}
+{% include templates/contentsection.html heading="Screenshots" %}
